# injectorppforrust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci-coverage.yml  ci.yml  coverage.yml  doc.yml  publish.yml  rust-clippy.yml
injectorpp-macros/: Cargo.toml
injectorpp-macros/src/: lib.rs
src/: injector_core.rs  interface.rs  lib.rs
src/injector_core/: arm64_codegenerator.rs  common.rs  internal.rs  linuxapi.rs  macosapi.rs  patch_amd64.rs  patch_arm.rs  patch_arm64.rs  patch_trait.rs  thread_local_registry.rs  utils.rs  winapi.rs
src/interface/: func_ptr.rs  injector.rs  macros.rs  verifier.rs
src/utilities/: network.rs
tests/: arm.rs  async.rs  async_unchecked.rs  azure.rs  cruntime.rs  fn_too_small.rs  fs.rs  global.rs  hyper.rs  issue73_lifetime_safety.rs  lifetime_safety.rs  namespace.rs  network.rs  patch_too_small.rs  reqwest.rs  rstest.rs  safety.rs  stack_overflow.rs  stack_safety.rs  system_linux.rs  thread.rs  thread_safety.rs  tokio.rs  will_execute.rs  will_execute_raw.rs  will_execute_raw_unchecked.rs  will_return.rs
tests/compile_fail/: fake_returns_dangling_reference.rs  func_info_prefix_lifetime_mismatch.rs  func_info_prefix_lifetime_mismatch.stderr  issue73_func_info_prefix.rs  issue73_func_info_prefix.stderr  issue73_static_as_bare_ref.rs  issue73_static_as_bare_ref.stderr  issue73_static_slice_as_bare_ref.rs  issue73_static_slice_as_bare_ref.stderr  static_slice_coerced_to_bare_ref.rs  static_slice_coerced_to_bare_ref.stderr  static_str_coerced_to_bare_ref.rs  static_str_coerced_to_bare_ref.stderr
