[package]
name = "injectorpp"
version = "0.4.0"
authors = ["Jingyu Ma <mazong1123us@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/microsoft/injectorppforrust"
categories = ["development-tools::testing"]
keywords = ["mock", "mocking", "testing"]
edition = "2021"
description = "Injectorpp is a powerful tool designed to facilitate the writing of unit tests without the need to introduce traits solely for testing purposes. It streamlines the testing process by providing a seamless and efficient way to abstract dependencies, ensuring that your code remains clean and maintainable."

[dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"], default-features = false }
azure_core = "0.25.0"
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { path = "hyper-util-0.1.14", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
hyper-tls = "0.6"
socket2 = "0.5.10"
